Fix iframe height issue on api.html page
After removing height styles on parent elements, the iframe element on
the api.html page was not showing full height.

To fix this, the height: 100% rule was replaced with height: 100vh.

--- a/site/src/site/assets/css/style.css
+++ b/site/src/site/assets/css/style.css
@@ -216,7 +216,7 @@ article .content time {
 
 .doc-embed {
     border: 0;
-    width: 100%;
+    height: 100vh;
     min-height: 100%;
 }
 
